removed all but first next arrow element to fix layout issue. moved gallery to just before footer

--- a/app/scss/components/_subfeature.scss
+++ b/app/scss/components/_subfeature.scss
@@ -118,8 +118,8 @@
 	}
 
 	&__img {
-		display: none;
-		// position: relative;
+		// display: none;
+		position: absolute;
 		top: 0;
 		left: 0;
 		width: 10vw;
@@ -133,6 +133,7 @@
 	}
 
 	&__accent {
+		display: none;
 		position: absolute;
 		top: 0;
 		left: 0;
